changing mongo-db to mongo_db

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_INITDB_ROOT_USERNAME=mongoadmin
 MONGO_INITDB_ROOT_PASSWORD=secret
 MONGO_INITDB_DATABASE=my_db
-MONGO_URL=mongodb://mongoadmin:secret@mongo-db:27017/?retryWrites=true&w=majority
+MONGO_URL=mongodb://mongoadmin:secret@mongo_db:27017/?retryWrites=true&w=majority
