--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
       - 27017:27017
     restart: always
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
+      - MONGO_INITDB_ROOT_USERNAME=mongoadmin
+      - MONGO_INITDB_ROOT_PASSWORD=secret
+      - MONGO_INITDB_DATABASE=mongo_db
     volumes:
       - mongo-data:/data/db
 
@@ -17,7 +17,7 @@ services:
      ports:
        - 1004:1004
      environment:
-      - MONGO_URL=${MONGO_URL}
+      - MONGO_URL=mongodb://mongoadmin:secret@mongo_db:27017/?retryWrites=true&w=majority
      depends_on:
       - mongo_db
 
