--- a/call-booking-application/admin-ui/Dockerfile
+++ b/call-booking-application/admin-ui/Dockerfile
@@ -2,6 +2,7 @@ FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
 RUN useradd adminui
 WORKDIR /app
+RUN chown useradd /app
 COPY . .
 RUN npm install
 EXPOSE 3000
