--- a/call-booking-application/user-api/Dockerfile
+++ b/call-booking-application/user-api/Dockerfile
@@ -2,6 +2,7 @@ FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
 RUN useradd userapi
 WORKDIR /app
+RUN chown userapi /app
 COPY . .
 RUN npm install
 EXPOSE 1004
