--- a/call-booking-application/admin-api/Dockerfile
+++ b/call-booking-application/admin-api/Dockerfile
@@ -2,6 +2,7 @@ FROM node:22.14.0-slim
 LABEL maintainer="varshitha"
 RUN useradd adminapi
 WORKDIR /app
+RUN chown adminapi /app
 COPY . .
 RUN npm install
 EXPOSE 1004
