--- a/call-booking-application/user-ui/Dockerfile
+++ b/call-booking-application/user-ui/Dockerfile
@@ -2,6 +2,7 @@ FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
 RUN useradd userui
 WORKDIR /app
+RUN chown userui /app
 COPY . .
 RUN npm install
 EXPOSE 3000
