--- a/call-booking-application/admin-api/Dockerfile
+++ b/call-booking-application/admin-api/Dockerfile
@@ -1,11 +1,13 @@
-FROM node:22.14.0-slim
+FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
-RUN useradd adminapi
+RUN useradd -m -s /bin/bash userui
 WORKDIR /app
-RUN chown adminapi /app
-COPY . .
-RUN npm install
-EXPOSE 1004
-USER adminapi
+RUN chown -R userui:userui /app
+COPY package*.json ./
+USER userui
 ENV MONGO_URL=""
+RUN mkdir -p /app/node_modules/.cache && chmod -R 777 /app/node_modules
+RUN npm install
+COPY --chown=userui:userui . .
+EXPOSE 1004
 CMD [ "npm" , "start" ]
