--- a/call-booking-application/user-ui/Dockerfile
+++ b/call-booking-application/user-ui/Dockerfile
@@ -1,11 +1,13 @@
 FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
-RUN useradd userui
+RUN useradd -m -s /bin/bash userui
 WORKDIR /app
-RUN chown userui /app
-COPY . .
-RUN npm install
-EXPOSE 3000
+RUN chown -R userui:userui /app
+COPY package*.json ./
 USER userui
+RUN mkdir -p /app/node_modules/.cache && chmod -R 777 /app/node_modules
+RUN npm install
+COPY --chown=userui:userui . .
+EXPOSE 3000
 CMD [ "npm" , "start" ]
 
