solving errors of dockerfile

--- a/call-booking-application/user-api/Dockerfile
+++ b/call-booking-application/user-api/Dockerfile
@@ -1,13 +1,11 @@
 FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
-RUN useradd -m -s /bin/bash userapi
+RUN useradd -m userapi
 WORKDIR /app
-RUN chown -R userapi:userapi /app
-COPY package*.json ./
+COPY --chown=userapi:userapi . .  
+RUN chmod -R 777 /app  
 USER userapi
 ENV MONGO_URL=""
-RUN mkdir -p /app/node_modules/.cache && chmod -R 777 /app/node_modules
 RUN npm install
-COPY --chown=userapi:userapi . .
 EXPOSE 3000
 CMD [ "npm" , "start" ]
