solving errors of dockerfile

--- a/call-booking-application/user-api/Dockerfile
+++ b/call-booking-application/user-api/Dockerfile
@@ -2,7 +2,7 @@ FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
 RUN useradd -m userapi
 WORKDIR /app
-COPY chown userapi /app
+RUN chown userapi /app
 COPY . .
 RUN npm install
 USER userapi
