solving errors of dockerfile

--- a/call-booking-application/admin-api/Dockerfile
+++ b/call-booking-application/admin-api/Dockerfile
@@ -1,13 +1,10 @@
 FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
-RUN useradd -m -s /bin/bash userui
+RUN useradd -m adminapi
 WORKDIR /app
-RUN chown -R userui:userui /app
-COPY package*.json ./
-USER userui
-ENV MONGO_URL=""
-RUN mkdir -p /app/node_modules/.cache && chmod -R 777 /app/node_modules
+RUN chown adminapi /app
+COPY . .
 RUN npm install
-COPY --chown=userui:userui . .
-EXPOSE 1004
+USER adminapi
+EXPOSE 3000
 CMD [ "npm" , "start" ]
