--- a/call-booking-application/admin-ui/Dockerfile
+++ b/call-booking-application/admin-ui/Dockerfile
@@ -1,12 +1,10 @@
 FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
-RUN useradd -m -s /bin/bash adminui
+RUN useradd -m adminui
 WORKDIR /app
-RUN chown -R adminui:adminui /app
-COPY package*.json ./
-USER adminui
-RUN mkdir -p /app/node_modules/.cache && chmod -R 777 /app/node_modules
+RUN chown adminui /app
+COPY . .
 RUN npm install
-COPY --chown=adminui:adminui . .
+USER adminui
 EXPOSE 3000
 CMD [ "npm" , "start" ]
