--- a/call-booking-application/user-ui/Dockerfile
+++ b/call-booking-application/user-ui/Dockerfile
@@ -2,10 +2,9 @@ FROM node:23.9.0-slim
 LABEL maintainer="varshitha"
 RUN useradd -m userui
 WORKDIR /app
-COPY --chown=userui:userui . .  
-RUN chmod -R 777 /app  
-USER userui
+RUN chown userui /app
+COPY . .
 RUN npm install
+USER userui
 EXPOSE 3000
 CMD [ "npm" , "start" ]
-
