solving errors of dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,16 +18,16 @@ services:
      ports:
        - 1004:1004
      environment:
-      - MONGO_URL=mongodb://mongoadmin:secret@mongodb:27017/?retryWrites=true&w=majority
+      - MONGO_URL=mongodb://mongoadmin:secret@mongodb:27017/admin?retryWrites=true
      depends_on:
       - mongodb
 
  admin-api:
     build: ./call-booking-application/admin-api
     ports:
-      - 1005:1005
+      - 1005:1004
     environment:
-      - MONGO_URL=mongodb://mongoadmin:secret@my_db:27017/?retryWrites=true&w=majority
+      - MONGO_URL=mongodb://mongoadmin:secret@mongodb:27017/admin?retryWrites=true
     depends_on:
       - mongodb
 
