solving errors of dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,9 +10,9 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=secret
     volumes:
       - mongo-data:/data/db
+    networks:
+      - app-network  
       
-    
-
  user-api:
      build: ./call-booking-application/user-api
      ports:
@@ -21,6 +21,9 @@ services:
       - MONGO_URL=mongodb://mongoadmin:secret@mongodb:27017/admin?retryWrites=true
      depends_on:
       - mongodb
+     user: "userapi"
+     networks:
+      - app-network
 
  admin-api:
     build: ./call-booking-application/admin-api
@@ -30,6 +33,9 @@ services:
       - MONGO_URL=mongodb://mongoadmin:secret@mongodb:27017/admin?retryWrites=true
     depends_on:
       - mongodb
+    user: "adminapi"
+    networks:
+      - app-network
 
  user-ui:
     build: ./call-booking-application/user-ui
@@ -37,6 +43,9 @@ services:
       - 3000:3000
     depends_on:
       - user-api
+    user: "userui"
+    networks:
+      - app-network
       
  admin-ui:
     build: ./call-booking-application/admin-ui
@@ -44,8 +53,15 @@ services:
       - 30001:30001
     depends_on:
       - admin-api
+    user: "adminui"
+    networks:
+      - app-network  
 
 volumes:
     mongo-data:
+
+networks:
+  app-network:
+    driver: bridge    
 
       
