--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,8 @@ services:
     user: "userui"
     networks:
       - app-network
+    environment:
+      - REACT_APP_API_URL=http://user-api:1004  
       
  admin-ui:
     build: ./call-booking-application/admin-ui
@@ -55,7 +57,9 @@ services:
       - admin-api
     user: "adminui"
     networks:
-      - app-network  
+      - app-network 
+    environment:
+      - REACT_APP_API_URL=http://admin-api:1005   
 
 volumes:
     mongo-data:
