solving errors of dockerfile

--- a/call-booking-application/admin-ui/Dockerfile
+++ b/call-booking-application/admin-ui/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /app
 RUN chown adminui /app
 COPY . .
 RUN npm install
+RUN mkdir -p /app/node_modules/.cache && chmod -R 777 /app/node_modules/.cache
 USER adminui
+ENV REACT_APP_API_URL="http://admin-api:1005"
 EXPOSE 30001
 CMD [ "npm" , "start" ]
